fix z-index on header for chrome 71 + optimize single post styles

--- a/css-live/css/header.css
+++ b/css-live/css/header.css
@@ -36,6 +36,7 @@
         transform-origin: 50% 0;
         transform: scale(.25, .21);
         transition: all .3s;
+        z-index: 10;
     }
 
     .top-nav::before, .top-nav::after {
@@ -94,9 +95,9 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        z-index: 10;
         cursor: pointer;
         -webkit-tap-highlight-color: transparent;
+        z-index: 2;
     }
 
     #showmenu:checked ~ .top-header .menu-button {
@@ -290,8 +291,6 @@
         transform: translate(var(--shiftX), var(--shiftY)) rotate(var(--rotate));
         display: flex;
         transition: transform .3s;
-        position: relative;
-        z-index: 10;
     }
     #showmenu:checked ~ .top-header .nav__item { --shiftX: 1rem; --shiftY: 0; }
     .top-header:focus-within .nav__item { --shiftX: 1rem; --shiftY: 0; }
@@ -449,7 +448,6 @@
         --input-col: 2;
         --input-w: 33.6rem;
         --input-fw: 33.6rem;
-        z-index: 10;
     }
 
     @media (min-width: 36em) {
@@ -557,7 +555,7 @@
         position: relative;
         left: .8em;
         top: .8rem;
-        font: 500 .8em/22px Montserrat, sans-serif;
+        font: 500 .8em/2.3rem Montserrat, sans-serif;
         color: var(--theme-color);
         transition: all .2s;
         cursor: pointer;
@@ -645,7 +643,6 @@
         position: relative;
         float: right;
         margin-bottom: 2rem;
-        z-index: 10;
     }
 
     .email__text {
@@ -701,7 +698,7 @@
         top: .8rem;
         width: 3rem;
         background: transparent;
-        font: 500 .8em/22px Montserrat, sans-serif;
+        font: 500 .8em/2.3rem Montserrat, sans-serif;
         color: var(--theme-color);
         border: none;
         transition: all .2s .1s;
@@ -720,7 +717,7 @@
     .email__label-part {
         position: absolute;
         left: .8em;
-        font: 500 .8em/22px Montserrat, sans-serif;
+        font: 500 .8em/2.3rem Montserrat, sans-serif;
         color: var(--theme-color);
         transition: all .2s;
         cursor: pointer;
